hphp/test/zend/bad/Zend/tests/generators/yield_ref_function_call_by_reference.php
<?php

function &nop(&$var) {
    return $var;
}

function &gen(&$var) {
    yield nop($var);
}

$var = "foo";
$gen = gen($var);
foreach ($gen as &$varRef) {
    $varRef = "bar";
}

var_dump($var);

?>